Changing naming convention for model variables from cnSomeModel to someModel

--- a/web/app/alternate/view.tpl.html
+++ b/web/app/alternate/view.tpl.html
@@ -1,5 +1,5 @@
 <cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Address List" model="model.viewModel.cnAddressModel"></cn-record-list>
+<cn-record-list heading="Address List" model="model.viewModel.addressModel"></cn-record-list>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Phone List" model="model.viewModel.cnPhoneModel"></cn-record-list>
+<cn-record-list heading="Phone List" model="model.viewModel.phoneModel"></cn-record-list>
