--- a/web/app/user/view.tpl.html
+++ b/web/app/user/view.tpl.html
@@ -1,3 +1,3 @@
 <cn-record-view model="model"></cn-record-view>
 <div class="vertical-spacer"></div>
-<cn-record-list heading="Access List" model="model.viewModel.cnAccessModel" remove-columns="user"></cn-record-list>
+<cn-record-list heading="Access List" model="model.viewModel.accessModel" remove-columns="user"></cn-record-list>
