--- a/web/app/error/403.tpl.html
+++ b/web/app/error/403.tpl.html
@@ -2,8 +2,10 @@
   <div class="container-fluid">
     <h3 class="text-primary">Forbidden (403)</h3>
     <div class="container-fluid">
-      Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page you requested.
-      Please try logging in under a different role and try again.
+      Sorry, but the <strong>{{ model.role.name }}</strong> role does not have access to the page or action
+      have you requested.<br />
+      Please try logging in under a different role and try again, <a ng-click="reload()">reload</a> the page
+      or <a ng-click="back()">go back</a> to the previous page.
     </div>
   </div>
 </div>
