--- a/web/app/language/view.tpl.html
+++ b/web/app/language/view.tpl.html
@@ -1,1 +1,3 @@
 <cn-record-view model="model"></cn-record-view>
+<div class="vertical-spacer"></div>
+<cn-record-list heading="User List" model="model.viewModel.userModel"></cn-record-list>
