--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -26,11 +26,11 @@
             <input ng-switch-when="typeahead"
               ng-attr-id="{{ input.key }}"
               name="name"
-              ng-model="model.viewModel.record[input.key]"
-              typeahead="item.value for item in getTypeaheadValues( input.key, $viewValue )"
-              typeahead-loading="true"
+              ng-model="model.viewModel.formattedRecord[input.key]"
+              typeahead="item.id as item.value for item in getTypeaheadValues( input.key, $viewValue )"
+              typeahead-editable="false"
+              typeahead-on-select="onSelectTypeahead( $item, $model, $label, input.key )"
               typeahead-min-length="2"
-              cn-change="patch( input.key )"
               class="form-control"
               type="text"
               placeholder="(Type the first few letters to search possible values)"
@@ -196,17 +196,22 @@
               </div>
             </div>
           </div>
-          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.required">
-            Cannot be blank
-          </span>
-          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.minlength">
-            Isn't long enough
-          </span>
-          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.format">
-            Invalid format
-          </span>
-          <span class="help-block" ng-if="innerForm.name.$dirty && innerForm.name.$error.conflict">
-            Conflicts with existing record
+          <span ng-if="innerForm.name.$invalid && innerForm.name.$dirty">
+            <span class="help-block" ng-if="innerForm.name.$error.required">
+              Cannot be blank
+            </span>
+            <span class="help-block" ng-if="innerForm.name.$error.minlength">
+              Isn't long enough
+            </span>
+            <span class="help-block" ng-if="innerForm.name.$error.format">
+              Invalid format
+            </span>
+            <span class="help-block" ng-if="innerForm.name.$error.conflict">
+              Conflicts with existing record
+            </span>
+            <span class="help-block" ng-if="innerForm.name.$error.editable">
+              Must be chosen from list
+            </span>
           </span>
         </div>
         <div ng-if="model.viewModel.record[input.key] != model.viewModel.backupRecord[input.key]"
