--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -88,7 +88,7 @@
           <i class="glyphicon glyphicon-plus"></i> Add
         </button>
         <button class="btn btn-default right"
-                ng-if="model.chooseEnabled"
+                ng-if="model.chooseEnabled && model.editEnabled"
                 ng-class="model.listModel.chooseMode ? 'btn-success' : 'btn-default'"
                 ng-click="model.listModel.toggleChooseMode()">
           <i class="glyphicon glyphicon-edit"
