--- a/web/app/cenozo/record-view.tpl.html
+++ b/web/app/cenozo/record-view.tpl.html
@@ -1,5 +1,5 @@
 <div class="container-fluid bg-primary rounded-top">
-  <h4>{{ heading }} <span ng-if="!isComplete">(Loading...)</span></h4>
+  <h4>{{ heading }}{{ model.editEnabled ? '' : ' (read only)' }} <span ng-if="!isComplete">(Loading...)</span></h4>
 </div>
 <form name="form" class="form-horizontal" novalidate>
   <div class="form-body">
@@ -21,7 +21,7 @@
               class="form-control"
               type="text"
               autocomplete="off"
-              ng-readonly="input.constant"
+              ng-disabled="!model.editEnabled || input.constant"
               ng-required="model.metadata.columnList[input.key].required"></input>
             <input ng-switch-when="typeahead"
               ng-attr-id="{{ input.key }}"
@@ -36,6 +36,7 @@
               type="text"
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
+              ng-disabled="!model.editEnabled"
               ng-required="model.metadata.columnList[input.key].required"></input>
             <input ng-switch-when="lookup-typeahead"
               ng-attr-id="{{ input.key }}"
@@ -50,6 +51,7 @@
               type="text"
               placeholder="(Type the first few letters to search possible values)"
               autocomplete="off"
+              ng-disabled="!model.editEnabled"
               ng-required="model.metadata.columnList[input.key].required"></input>
             <input ng-switch-when="date"
               ng-attr-id="{{ input.key }}"
@@ -58,6 +60,7 @@
               class="form-control"
               type="text"
               ng-click="selectDatetime( input )"
+              ng-disabled="!model.editEnabled"
               onkeydown="return false"></input>
             <input ng-switch-when="time"
               ng-attr-id="{{ input.key }}"
@@ -66,6 +69,7 @@
               class="form-control"
               type="text"
               ng-click="selectDatetime( input )"
+              ng-disabled="!model.editEnabled"
               onkeydown="return false"></input>
             <input ng-switch-when="timesecond"
               ng-attr-id="{{ input.key }}"
@@ -74,6 +78,7 @@
               class="form-control"
               type="text"
               ng-click="selectDatetime( input )"
+              ng-disabled="!model.editEnabled"
               onkeydown="return false"></input>
             <input ng-switch-when="datetime"
               ng-attr-id="{{ input.key }}"
@@ -82,6 +87,7 @@
               class="form-control"
               type="text"
               ng-click="selectDatetime( input )"
+              ng-disabled="!model.editEnabled"
               onkeydown="return false"></input>
             <input ng-switch-when="datetimesecond"
               ng-attr-id="{{ input.key }}"
@@ -90,6 +96,7 @@
               class="form-control"
               type="text"
               ng-click="selectDatetime( input )"
+              ng-disabled="!model.editEnabled"
               onkeydown="return false"></input>
             <select ng-switch-default
               ng-attr-id="{{ input.key }}"
@@ -98,7 +105,7 @@
               ng-model="model.viewModel.record[input.key]"
               ng-change="patch( input.key )"
               class="form-control"
-              ng-readonly="input.constant || !input.enumList"
+              ng-disabled="!model.editEnabled || input.constant || !input.enumList"
               ng-required="model.metadata.columnList[input.key].required"></select>
             <textarea ng-switch-when="text"
               cn-elastic
@@ -107,7 +114,7 @@
               ng-model="model.viewModel.record[input.key]"
               cn-change="patch( input.key )"
               class="form-control"
-              ng-readonly="input.constant"
+              ng-disabled="!model.editEnabled || input.constant"
               ng-required="model.metadata.columnList[input.key].required"></textarea>
             <div ng-switch-when="months" class="row">
               <div class="col-sm-2">
@@ -115,6 +122,7 @@
                   <input id="january" name="name"
                     ng-model="model.viewModel.record.january"
                     ng-change="patch( 'january' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> January
                 </label>
               </div>
@@ -123,6 +131,7 @@
                   <input id="february" name="name"
                     ng-model="model.viewModel.record.february"
                     ng-change="patch( 'february' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> February
                 </label>
               </div>
@@ -131,6 +140,7 @@
                   <input id="march" name="name"
                     ng-model="model.viewModel.record.march"
                     ng-change="patch( 'march' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> March
                 </label>
               </div>
@@ -139,6 +149,7 @@
                   <input id="april" name="name"
                     ng-model="model.viewModel.record.april"
                     ng-change="patch( 'april' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> April
                 </label>
               </div>
@@ -147,6 +158,7 @@
                   <input id="may" name="name"
                     ng-model="model.viewModel.record.may"
                     ng-change="patch( 'may' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> May
                 </label>
               </div>
@@ -155,6 +167,7 @@
                   <input id="june" name="name"
                     ng-model="model.viewModel.record.june"
                     ng-change="patch( 'june' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> June
                 </label>
               </div>
@@ -165,6 +178,7 @@
                   <input id="july" name="name"
                     ng-model="model.viewModel.record.july"
                     ng-change="patch( 'july' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> July
                 </label>
               </div>
@@ -173,6 +187,7 @@
                   <input id="august" name="name"
                     ng-model="model.viewModel.record.august"
                     ng-change="patch( 'august' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> August
                 </label>
               </div>
@@ -189,6 +204,7 @@
                   <input id="october" name="name"
                     ng-model="model.viewModel.record.october"
                     ng-change="patch( 'october' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> October
                 </label>
               </div>
@@ -197,6 +213,7 @@
                   <input id="november" name="name"
                     ng-model="model.viewModel.record.november"
                     ng-change="patch( 'november' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> November
                 </label>
               </div>
@@ -205,6 +222,7 @@
                   <input id="december" name="name"
                     ng-model="model.viewModel.record.december"
                     ng-change="patch( 'december' )"
+                    ng-disabled="!model.editEnabled"
                     type="checkbox"> December
                 </label>
               </div>
