Adding "On Break" button to toolbelt

--- a/web/app/cenozo/toolbelt.tpl.html
+++ b/web/app/cenozo/toolbelt.tpl.html
@@ -5,6 +5,12 @@
      tooltip-placement="bottom">
     <i class="glyphicon glyphicon-home"></i>
   </a>
+  <a class="btn btn-default"
+     ng-click="startBreak()"
+     tooltip="Go on Break"
+     tooltip-placement="bottom">
+    <i class="glyphicon glyphicon-pause"></i>
+  </a>
   <a href="?logout"
      class="btn btn-default"
      tooltip="Logout"
