--- a/web/app/cenozo/modal-message.tpl.html
+++ b/web/app/cenozo/modal-message.tpl.html
@@ -1,6 +1,5 @@
-<form ng-submit="local.close()">
+<form ng-submit="local.close()" class="noselect">
   <div class="modal-header">
-    <button type="button" class="close" ng-click="local.close()">&times;</button>
     <h4 class="modal-title">{{ local.title }}</h4>
   </div>
   <div class="modal-body" ng-class="{ 'text-danger': local.error }">{{ local.message }}</div>
