--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -1,6 +1,5 @@
-<form ng-submit="local.ok( local.comparison )">
+<form ng-submit="local.ok( local.comparison )" class="noselect">
   <div class="modal-header">
-    <button type="button" class="close" ng-click="local.cancel()">&times;</button>
     <h4 class="modal-title">Restrict listing</h4>
   </div>
   <div class="modal-body">
