--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.ok()" novalidate name="form">
+<form ng-submit="local.ok()" novalidate name="form" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Select a timezone</h4>
   </div>
