--- a/web/app/cenozo/modal-value.tpl.html
+++ b/web/app/cenozo/modal-value.tpl.html
@@ -1,6 +1,5 @@
-<form ng-submit="local.ok( value )">
+<form ng-submit="local.ok( value )" class="noselect">
   <div class="modal-header">
-    <button type="button" class="close" ng-click="local.cancel()">&times;</button>
     <h4 class="modal-title">{{ local.title }}</h4>
   </div>
   <div class="modal-body">
