--- a/web/app/cenozo/modal-confirm.tpl.html
+++ b/web/app/cenozo/modal-confirm.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.yes()">
+<form ng-submit="local.yes()" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">{{ local.title }}</h4>
   </div>
