--- a/web/app/cenozo/modal-datetime.tpl.html
+++ b/web/app/cenozo/modal-datetime.tpl.html
@@ -1,4 +1,4 @@
-<form ng-submit="local.ok()">
+<form ng-submit="local.ok()" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Select a value for {{ local.title }}</h4>
   </div>
