Redesign of app header

--- a/web/app/cenozo/clock.tpl.html
+++ b/web/app/cenozo/clock.tpl.html
@@ -1,4 +1,6 @@
 <button class="btn btn-default"
         ng-click="chooseTimezone()"
         tooltip="Click to change the timezone"
-        tooltip-placement="bottom">{{ time }}</button>
+        tooltip-placement="bottom">
+  <i class="glyphicon glyphicon-time"></i> {{ time }}
+</button>
