Moving site/role picker to a modal

--- a/web/app/cenozo/modal-timezone.tpl.html
+++ b/web/app/cenozo/modal-timezone.tpl.html
@@ -1,6 +1,6 @@
 <form ng-submit="local.ok()" novalidate name="form" class="noselect">
   <div class="modal-header">
-    <h4 class="modal-title">Select a timezone</h4>
+    <h4 class="modal-title">Select a Timezone</h4>
   </div>
   <!-- this model-body requires a specialized style so that the typeahead displays correctly -->
   <div class="modal-body" style="overflow: visible; margin-bottom: 4em;">
