--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -7,7 +7,7 @@
   <thead>
     <tr class="info">
       <td ng-repeat="column in columnArray">
-        <div class="btn-group" role="group" area-hidden="true" tooltip="{{ column.help }}">
+        <div class="btn-group" tooltip="{{ column.help }}">
           <button class="btn btn-narrow btn-info"
                   ng-click="model.listModel.orderBy( column.key )">{{ column.title }}
             <i ng-if="null !== model.listModel.order && model.listModel.order.column == column.key"
