--- a/web/app/collection/view.tpl.html
+++ b/web/app/collection/view.tpl.html
@@ -1,5 +1,9 @@
 <cn-record-view model="model"></cn-record-view>
-<div class="vertical-spacer"></div>
-<cn-record-list heading="Collection Participants" model="model.viewModel.participantModel"></cn-record-list>
-<div class="vertical-spacer"></div>
-<cn-record-list heading="User Access List" model="model.viewModel.userModel"></cn-record-list>
+<div class="vertical-spacer" ng-repeat="child in model.choosing">
+  <cn-record-list heading="{{ child.title }} List"
+                  model="model.viewModel[child.camel+'Model']"></cn-record-list>
+</div>
+<div class="vertical-spacer" ng-repeat="child in model.children">
+  <cn-record-list heading="{{ child.title }} List"
+                  model="model.viewModel[child.camel+'Model']"></cn-record-list>
+</div>
