Adding password manager

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -37,7 +37,7 @@
     </thead>
     <tbody>
       <tr ng-if="model.listModel.isLoading">
-        <td colspan="{{ numColumns }}" style="background-color: #FFF">
+        <td colspan="{{ numColumns }}" style="background-color: white">
           <div class="loader" tooltip="Loading..."></div>
         </td>
       </tr>
