--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -4,9 +4,42 @@
     <h4 class="modal-title">Account Details</h4>
   </div>
   <div class="modal-body">
-    TODO
+    <p class="text-info">
+      Settings, settings, tra-la-la.
+    </p>
+    <hr />
+    <div class="form-group">
+      <label for="first_name" class="col-sm-3 control-label">First Name</label>
+      <div class="col-sm-9">
+        <input name="first_name"
+               ng-model="local.first_name"
+               class="form-control"
+               type="text"
+               required />
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="last_name" class="col-sm-3 control-label">Last Name</label>
+      <div class="col-sm-9">
+        <input name="last_name"
+               ng-model="local.last_name"
+               class="form-control"
+               type="text"
+               required />
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email" class="col-sm-3 control-label">Email</label>
+      <div class="col-sm-9">
+        <input name="email"
+               ng-model="local.email"
+               class="form-control"
+               type="text"
+               required />
+      </div>
+    </div>
   </div>
-  <div class="modal-footer" style="margin-top: 0px">
+  <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
     <button type="submit" class="btn btn-primary">OK</button>
   </div>
