--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -5,42 +5,66 @@
   </div>
   <div class="modal-body">
     <p class="text-info">
-      Settings, settings, tra-la-la.
+      Fill out this form to change your account details:
     </p>
     <hr />
-    <div class="form-group">
-      <label for="first_name" class="col-sm-3 control-label">First Name</label>
+    <div class="form-group"
+         ng-class="{ 'has-feedback has-error': form.firstName.$invalid }">
+      <label for="firstName" class="col-sm-3 control-label">First Name</label>
       <div class="col-sm-9">
-        <input name="first_name"
-               ng-model="local.first_name"
-               class="form-control"
-               type="text"
-               required />
+        <div class="input-group"
+             ng-class="{ 'has-feedback has-error': form.firstName.$invalid }">
+          <input name="firstName"
+                 ng-model="local.firstName"
+                 class="form-control"
+                 type="text"
+                 required />
+        </div>
+        <span ng-if="form.firstName.$invalid">
+          <span class="help-block" ng-if="form.firstName.$error.required">Cannot be blank</span>
+        </span>
       </div>
     </div>
-    <div class="form-group">
-      <label for="last_name" class="col-sm-3 control-label">Last Name</label>
+    <div class="form-group"
+         ng-class="{ 'has-feedback has-error': form.lastName.$invalid }">
+      <label for="lastName" class="col-sm-3 control-label">Last Name</label>
       <div class="col-sm-9">
-        <input name="last_name"
-               ng-model="local.last_name"
-               class="form-control"
-               type="text"
-               required />
+        <div class="input-group"
+             ng-class="{ 'has-feedback has-error': form.lastName.$invalid }">
+          <input name="lastName"
+                 ng-model="local.lastName"
+                 class="form-control"
+                 type="text"
+                 required />
+        </div>
+        <span ng-if="form.lastName.$invalid">
+          <span class="help-block" ng-if="form.lastName.$error.required">Cannot be blank</span>
+        </span>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group"
+         ng-class="{ 'has-feedback has-error': form.email.$invalid }">
       <label for="email" class="col-sm-3 control-label">Email</label>
       <div class="col-sm-9">
-        <input name="email"
-               ng-model="local.email"
-               class="form-control"
-               type="text"
-               required />
+        <div class="input-group"
+             ng-class="{ 'has-feedback has-error': form.email.$invalid }">
+          <input name="email"
+                 ng-model="local.email"
+                 ng-change="local.testEmailFormat()"
+                 class="form-control"
+                 type="text"
+                 required />
+        </div>
+        <span ng-if="form.email.$invalid">
+          <span class="help-block" ng-if="form.email.$error.required">Cannot be blank</span>
+          <span class="help-block" ng-if="form.email.$error.format">Invalid format</span>
+        </span>
       </div>
     </div>
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" ng-click="local.cancel()">Cancel</button>
-    <button type="submit" class="btn btn-primary">OK</button>
+    <button type="submit" class="btn btn-primary"
+            ng-disabled="form.email.$error.format || form.$invalid">OK</button>
   </div>
 </form>
