--- a/web/app/cenozo/modal-account.tpl.html
+++ b/web/app/cenozo/modal-account.tpl.html
@@ -10,8 +10,8 @@
     <hr />
     <div class="form-group"
          ng-class="{ 'has-feedback has-error': form.firstName.$invalid }">
-      <label for="firstName" class="col-sm-3 control-label">First Name</label>
-      <div class="col-sm-9">
+      <label for="firstName" class="col-sm-4 control-label">First Name</label>
+      <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.firstName.$invalid }">
           <input name="firstName"
@@ -27,8 +27,8 @@
     </div>
     <div class="form-group"
          ng-class="{ 'has-feedback has-error': form.lastName.$invalid }">
-      <label for="lastName" class="col-sm-3 control-label">Last Name</label>
-      <div class="col-sm-9">
+      <label for="lastName" class="col-sm-4 control-label">Last Name</label>
+      <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.lastName.$invalid }">
           <input name="lastName"
@@ -44,8 +44,8 @@
     </div>
     <div class="form-group"
          ng-class="{ 'has-feedback has-error': form.email.$invalid }">
-      <label for="email" class="col-sm-3 control-label">Email</label>
-      <div class="col-sm-9">
+      <label for="email" class="col-sm-4 control-label">Email</label>
+      <div class="col-sm-8">
         <div class="input-group"
              ng-class="{ 'has-feedback has-error': form.email.$invalid }">
           <input name="email"
@@ -59,6 +59,17 @@
           <span class="help-block" ng-if="form.email.$error.required">Cannot be blank</span>
           <span class="help-block" ng-if="form.email.$error.format">Invalid format</span>
         </span>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="use12HourClock" class="col-sm-4 control-label">Use 12-Hour Clock</label>
+      <div class="col-sm-8">
+        <div class="input-group">
+          <select name="name" ng-model="local.use12HourClock" class="form-control" required>
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+          </select>
+        </div>
       </div>
     </div>
   </div>
