--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -2,36 +2,126 @@
   <div class="modal-header">
     <h4 class="modal-title">Restrict listing</h4>
   </div>
-  <div class="modal-body">
+  <div class="modal-body" ng-switch="local.type">
     <p class="text-info">
       Provide how you wish to restrict the <strong>{{ local.name.singular | cnUCWords }}</strong> listing
       based on the <strong>{{ local.column }}</strong> column:
     </p>
     <hr />
-    <div class="form-group">
-      <label for="comparison" class="col-sm-3 control-label">Comparison</label>
-      <div class="col-sm-9">
-        <select name="comparison" ng-model="local.comparison.test" class="form-control">
-          <option value="&lt;=&gt;">is</option>
-          <option value="&lt;&gt;">is not</option>
-          <option value="like">is like</option>
-          <option value="not like">is not like</option>
-          <option value="&gt;">greater than</option>
-          <option value="&gt;=">greater or equal to</option>
-          <option value="&lt;">less than</option>
-          <option value="&lt;=">less or equal to</option>
-        </select>
+    <div ng-switch-when="string">
+      <div class="form-group">
+        <label for="comparison" class="col-sm-3 control-label">Comparison</label>
+        <div class="col-sm-9">
+          <select name="comparison" ng-model="local.comparison.test" class="form-control">
+            <option value="&lt;=&gt;">is</option>
+            <option value="&lt;&gt;">is not</option>
+            <option value="like">is like</option>
+            <option value="not like">is not like</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="value" class="col-sm-3 control-label">Value</label>
+        <div class="col-sm-9">
+          <input name="value"
+                 ng-model="local.comparison.value"
+                 class="form-control"
+                 type="text"
+                 placeholder="restriction value" />
+        </div>
       </div>
     </div>
-    <div class="form-group">
-      <label for="value" class="col-sm-3 control-label">Value</label>
-      <div class="col-sm-9">
-        <input name="value"
-               ng-model="local.comparison.value"
-               class="form-control"
-               type="text"
-               placeholder="restriction value"
-               required />
+    <div ng-switch-when="boolean">
+      <div class="form-group">
+        <label for="value" class="col-sm-3 control-label">Value</label>
+        <div class="col-sm-9">
+          <select name="comparison" ng-model="local.comparison.test" class="form-control">
+            <option value="&lt;=&gt;">is</option>
+            <option value="&lt;&gt;">is not</option>
+          </select>
+          <select name="value" ng-model="local.comparison.value" class="form-control">
+            <option value="1">Yes</option>
+            <option value="0">No</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div ng-switch-when="number">
+      <div class="form-group">
+        <label for="comparison" class="col-sm-3 control-label">Comparison</label>
+        <div class="col-sm-9">
+          <select name="comparison" ng-model="local.comparison.test" class="form-control">
+            <option value="&lt;=&gt;">is</option>
+            <option value="&lt;&gt;">is not</option>
+            <option value="&gt;">greater than</option>
+            <option value="&gt;=">greater or equal to</option>
+            <option value="&lt;">less than</option>
+            <option value="&lt;=">less or equal to</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="value" class="col-sm-3 control-label">Value</label>
+        <div class="col-sm-9">
+          <input name="value"
+                 ng-model="local.comparison.value"
+                 class="form-control"
+                 type="text"
+                 placeholder="restriction number" />
+        </div>
+      </div>
+    </div>
+    <div ng-switch-when="rank">
+      <div class="form-group">
+        <label for="comparison" class="col-sm-3 control-label">Comparison</label>
+        <div class="col-sm-9">
+          <select name="comparison" ng-model="local.comparison.test" class="form-control">
+            <option value="&lt;=&gt;">is</option>
+            <option value="&lt;&gt;">is not</option>
+            <option value="&gt;">greater than</option>
+            <option value="&gt;=">greater or equal to</option>
+            <option value="&lt;">less than</option>
+            <option value="&lt;=">less or equal to</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="value" class="col-sm-3 control-label">Value</label>
+        <div class="col-sm-9">
+          <input name="value"
+                 ng-model="local.comparison.value"
+                 class="form-control"
+                 type="text"
+                 placeholder="restriction rank" />
+        </div>
+      </div>
+    </div>
+    <div ng-switch-default>
+      <div class="form-group">
+        <label for="comparison" class="col-sm-3 control-label">Comparison</label>
+        <div class="col-sm-9">
+          <select name="comparison" ng-model="local.comparison.test" class="form-control">
+            <option value="&lt;=&gt;">is</option>
+            <option value="&lt;&gt;">is not</option>
+            <option value="&gt;">greater than</option>
+            <option value="&gt;=">greater or equal to</option>
+            <option value="&lt;">less than</option>
+            <option value="&lt;=">less or equal to</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="value" class="col-sm-3 control-label">Value</label>
+        <div class="col-sm-9">
+          <input name="value"
+                 ng-model="local.formattedValue"
+                 class="form-control"
+                 type="text"
+                 ng-click="local.selectDatetime()"
+                 placeholder="restriction {{ 'time' == local.type || 'timesecond' == local.type ?
+                                             'time' : 'date &amp; time' }}"
+                 onkeydown="return false" />
+        </div>
       </div>
     </div>
   </div>
