Tweaking code, fixing bugs, etc

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -27,8 +27,7 @@
                tooltip="To remove click the filter, then remove button"
                tooltip-placement="bottom"
                tooltip-popup-delay="750">
-              {{ column.restrict.test | cnComparator }}
-              "{{ column.restrict.value }}"
+              {{ column.restrict.test | cnComparator }} {{ column.restrict.formattedValue }}
             </p>
           </div>
         </td>
