--- a/web/app/cenozo/modal-restrict.tpl.html
+++ b/web/app/cenozo/modal-restrict.tpl.html
@@ -1,137 +1,161 @@
-<form ng-submit="local.ok( local.restrict )" class="noselect">
+<form ng-submit="local.ok( local.restrictList )" class="noselect">
   <div class="modal-header">
     <h4 class="modal-title">Restrict listing</h4>
   </div>
-  <div class="modal-body" ng-switch="local.type">
+  <div class="modal-body">
     <p class="text-info">
       Provide how you wish to restrict the <strong>{{ local.name.singular | cnUCWords }}</strong> listing
       based on the <strong>{{ local.column }}</strong> column:
     </p>
-    <hr />
-    <div ng-switch-when="string">
-      <div class="form-group">
-        <label for="restrict" class="col-sm-3 control-label">Comparison</label>
-        <div class="col-sm-9">
-          <select name="restrict" ng-model="local.restrict.test" class="form-control">
-            <option value="&lt;=&gt;">is</option>
-            <option value="&lt;&gt;">is not</option>
-            <option value="like">is like</option>
-            <option value="not like">is not like</option>
+    <div ng-class="{'restrict-add': !$first}"
+         ng-repeat="restrict in local.restrictList"
+         ng-switch="local.type">
+      <hr />
+      <div ng-if="!$first" class="form-group">
+        <div class="col-sm-offset-3 col-sm-5">
+          <select name="{{ 'logic' + $index }}"
+                  ng-model="restrict.logic"
+                  class="form-control">
+            <option value="and">AND</option>
+            <option value="or">OR</option>
           </select>
         </div>
-      </div>
-      <div class="form-group">
-        <label for="value" class="col-sm-3 control-label">Value</label>
-        <div class="col-sm-9">
-          <input name="value"
-                 ng-model="local.restrict.value"
-                 class="form-control"
-                 type="text"
-                 placeholder="restriction value" />
+        <div class="col-sm-4">
+          <button type="button" class="btn btn-danger pull-right" ng-click="local.removeRestriction( $index )">
+            Remove Condition
+          </button>
         </div>
       </div>
-    </div>
-    <div ng-switch-when="boolean">
-      <div class="form-group">
-        <label for="value" class="col-sm-3 control-label">Value</label>
-        <div class="col-sm-9">
-          <select name="restrict" ng-model="local.restrict.test" class="form-control">
-            <option value="&lt;=&gt;">is</option>
-            <option value="&lt;&gt;">is not</option>
-          </select>
-          <select name="value" ng-model="local.restrict.value" class="form-control">
-            <option value="1">Yes</option>
-            <option value="0">No</option>
-          </select>
+      <div ng-switch-when="string">
+        <div class="form-group">
+          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Comparison</label>
+          <div class="col-sm-9">
+            <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
+              <option value="&lt;=&gt;">is</option>
+              <option value="&lt;&gt;">is not</option>
+              <option value="like">is like</option>
+              <option value="not like">is not like</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <input name="{{ 'value' + $index }}"
+                   ng-model="restrict.value"
+                   class="form-control"
+                   type="text"
+                   placeholder="restriction value" />
+          </div>
         </div>
       </div>
-    </div>
-    <div ng-switch-when="number">
-      <div class="form-group">
-        <label for="restrict" class="col-sm-3 control-label">Comparison</label>
-        <div class="col-sm-9">
-          <select name="restrict" ng-model="local.restrict.test" class="form-control">
-            <option value="&lt;=&gt;">is</option>
-            <option value="&lt;&gt;">is not</option>
-            <option value="&gt;">greater than</option>
-            <option value="&gt;=">greater or equal to</option>
-            <option value="&lt;">less than</option>
-            <option value="&lt;=">less or equal to</option>
-          </select>
+      <div ng-switch-when="boolean">
+        <div class="form-group">
+          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
+              <option value="&lt;=&gt;">is</option>
+              <option value="&lt;&gt;">is not</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <select name="{{ 'value' + $index }}" ng-model="restrict.value" class="form-control">
+              <option value="1">Yes</option>
+              <option value="0">No</option>
+            </select>
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="value" class="col-sm-3 control-label">Value</label>
-        <div class="col-sm-9">
-          <input name="value"
-                 ng-model="local.restrict.value"
-                 class="form-control"
-                 type="text"
-                 placeholder="restriction number" />
+      <div ng-switch-when="number">
+        <div class="form-group">
+          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Comparison</label>
+          <div class="col-sm-9">
+            <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
+              <option value="&lt;=&gt;">is</option>
+              <option value="&lt;&gt;">is not</option>
+              <option value="&gt;">greater than</option>
+              <option value="&gt;=">greater or equal to</option>
+              <option value="&lt;">less than</option>
+              <option value="&lt;=">less or equal to</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <input name="{{ 'value' + $index }}"
+                   ng-model="restrict.value"
+                   class="form-control"
+                   type="text"
+                   placeholder="restriction number" />
+          </div>
         </div>
       </div>
-    </div>
-    <div ng-switch-when="rank">
-      <div class="form-group">
-        <label for="restrict" class="col-sm-3 control-label">Comparison</label>
-        <div class="col-sm-9">
-          <select name="restrict" ng-model="local.restrict.test" class="form-control">
-            <option value="&lt;=&gt;">is</option>
-            <option value="&lt;&gt;">is not</option>
-            <option value="&gt;">greater than</option>
-            <option value="&gt;=">greater or equal to</option>
-            <option value="&lt;">less than</option>
-            <option value="&lt;=">less or equal to</option>
-          </select>
+      <div ng-switch-when="rank">
+        <div class="form-group">
+          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Comparison</label>
+          <div class="col-sm-9">
+            <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
+              <option value="&lt;=&gt;">is</option>
+              <option value="&lt;&gt;">is not</option>
+              <option value="&gt;">greater than</option>
+              <option value="&gt;=">greater or equal to</option>
+              <option value="&lt;">less than</option>
+              <option value="&lt;=">less or equal to</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <input name="{{ 'value' + $index }}"
+                   ng-model="restrict.value"
+                   class="form-control"
+                   type="text"
+                   placeholder="restriction rank" />
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="value" class="col-sm-3 control-label">Value</label>
-        <div class="col-sm-9">
-          <input name="value"
-                 ng-model="local.restrict.value"
-                 class="form-control"
-                 type="text"
-                 placeholder="restriction rank" />
+      <div ng-switch-default>
+        <div class="form-group">
+          <label for="{{ 'test' + $index }}" class="col-sm-3 control-label">Comparison</label>
+          <div class="col-sm-9">
+            <select name="{{ 'test' + $index }}" ng-model="restrict.test" class="form-control">
+              <option value="&lt;=&gt;">is</option>
+              <option value="&lt;&gt;">is not</option>
+              <option value="&gt;">greater than</option>
+              <option value="&gt;=">greater or equal to</option>
+              <option value="&lt;">less than</option>
+              <option value="&lt;=">less or equal to</option>
+            </select>
+          </div>
         </div>
-      </div>
-    </div>
-    <div ng-switch-default>
-      <div class="form-group">
-        <label for="restrict" class="col-sm-3 control-label">Comparison</label>
-        <div class="col-sm-9">
-          <select name="restrict" ng-model="local.restrict.test" class="form-control">
-            <option value="&lt;=&gt;">is</option>
-            <option value="&lt;&gt;">is not</option>
-            <option value="&gt;">greater than</option>
-            <option value="&gt;=">greater or equal to</option>
-            <option value="&lt;">less than</option>
-            <option value="&lt;=">less or equal to</option>
-          </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="value" class="col-sm-3 control-label">Value</label>
-        <div class="col-sm-9">
-          <input name="value"
-                 ng-model="local.formattedValue"
-                 class="form-control"
-                 type="text"
-                 ng-click="local.selectDatetime()"
-                 placeholder="restriction {{ 'time' == local.type || 'timesecond' == local.type ?
-                                             'time' : 'date &amp; time' }}"
-                 onkeydown="return false" />
+        <div class="form-group">
+          <label for="{{ 'value' + $index }}" class="col-sm-3 control-label">Value</label>
+          <div class="col-sm-9">
+            <input name="{{ 'value' + $index }}"
+                   ng-model="local.formattedValueList[$index]"
+                   class="form-control"
+                   type="text"
+                   ng-click="local.selectDatetime( $index )"
+                   placeholder="restriction {{ 'time' == local.type || 'timesecond' == local.type ?
+                                               'time' : 'date &amp; time' }}"
+                   onkeydown="return false" />
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="modal-footer">
+    <button type="button" class="btn btn-info pull-left"
+            ng-click="local.addRestriction()">Add Condition</button>
     <button type="button" class="btn btn-default"
-            ng-if="!local.preExisting"
-            ng-click="local.cancel()">Cancel</button>
-    <button type="button" class="btn btn-default"
-            ng-if="local.preExisting"
-            ng-click="local.remove()">Remove</button>
+            ng-click="local.preExisting ? local.remove() : local.cancel()">
+      {{ local.preExisting ? 'Remove' : 'Cancel' }}
+    </button>
     <button type="submit" class="btn btn-primary">OK</button>
   </div>
 </form>
